# Computergrafik

3aufgabe/asteroids_opengl/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main_game  main_game.cc  matrix_test  physics_test
3aufgabe/matrix/: Makefile
3aufgabe/viewer/: CMakeCache.txt  Makefile
aufgabe1/asteroids/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry_test  main_game  math_test  physics_test  sdl2_renderer.cc
aufgabe1/geometry/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
aufgabe1/geometry/aufgabe3/asteroids_opengl/: CMakeLists.txt  game_test  geometry_test  main_game  opengl_renderer.cc
aufgabe1/geometry/aufgabe3/matrix/: CMakeCache.txt  cmake_install.cmake
aufgabe1/geometry/aufgabe3/viewer/: wavefront_test.cc
aufgabe1/math/: CMakeCache.txt  Makefile  cmake_install.cmake  math.h  math.tcc  math_test  math_test.cc
aufgabe1/math/.cmake/api/v1/reply/: cache-v2-388b56d368abd055bf80.json  cmakeFiles-v1-5ad5fd40fa3ac9178645.json  cmakeFiles-v1-d7f95ab75dffadecd1da.json  codemodel-v2-4d01abcdc2ccf11b16a2.json  index-2024-11-01T06-11-15-0030.json  index-2024-11-05T16-12-23-0416.json  target-math_test-Debug-138877dd83f050549211.json
aufgabe2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  geometry.tcc  geometry_test  geometry_test.cc  math_test  raytracer  raytracer.cc
aufgabe3/asteroids_3d_models/: CMakeCache.txt  CMakeLists.txt  Makefile  asteroid.mtl  cmake_install.cmake  debris.mtl  saucer.mtl  spaceship.mtl  spaceship_boost.mtl  torpedo.mtl  viewer  wavefront_test
aufgabe3/asteroids_opengl/: CMakeLists.txt  game.cc  game_test  main_game  math_test  matrix_test  opengl_renderer.cc  physics.tcc
aufgabe3/asteroids_opengl_3d/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry_test  main_game  main_game.cc  math_test  matrix.h  matrix_test  matrix_test.cc  opengl_renderer.cc  physics_test  wavefront_test
aufgabe3/matrix/: CMakeLists.txt  CTestTestfile.cmake  math.tcc  matrix.tcc  matrix_test
aufgabe3/viewer/: cmake_install.cmake  viewer  wavefront.cc  wavefront_test
raytracer/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  abgabe-raytracer.cc  cmake_install.cmake  math.h  raytracer.cc
raytracer/aufgabe/: raytracer.cc
task3/matrix/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  math.h  math_test  matrix.tcc  matrix_test
task3/viewer/: viewer.cc  wavefront.cc
